# sqlited

./: Cargo.toml  README.md  migration_test_expanded.rs  without_id_test_expanded.rs
sqlited-macros/: Cargo.toml
sqlited-macros/src/: lib.rs  query_impl.rs  sql_as_impl.rs  sql_check_impl.rs  sql_impl.rs  sql_no_quote_impl.rs  sql_params_impl.rs  table_impl.rs  utils.rs
src/: autoincrement_example.rs  connection.rs  custom_type_test.rs  error.rs  example.rs  generic_without_id_example.rs  lib.rs  macros.rs  macros_test.rs  migrations.rs  pool.rs  row.rs  savepoint.rs  sql_params_test.rs  without_id_test.rs
src/types/: datetime.rs  mod.rs  timestamp.rs
tests/: attr_test.rs  custom_type_test.rs  macros_test.rs  migration_test.rs  sql_params_test.rs  without_id_test.rs
