[package]
name = "sqlited"
version = "0.2.4"
edition = "2024"
resolver = "3"
authors = ["AI"]
description = "SQLite macros implementation"

[dependencies]
log = "0.4"
rusqlite = { version = "0.35", features = ["bundled"] }
thiserror = "2.0"
r2d2 = "0.8"
r2d2_sqlite = "0.28"
uuid = { version = "1.4", features = ["v4"] }
triomphe = "0.1.14"
sqlited-macros = { path = "./sqlited-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
bincode = "1.3"
md5 = "0.7"
syn = "2.0"
anyhow = "1.0"

[lib]
doctest = false