[package]
name = "sqlited"
version = "0.3.0"
edition = "2024"
resolver = "3"
authors = ["AI"]
description = "SQLite macros implementation"

[dependencies]
log = "0.4"
rusqlite = { version = "0.37.0", features = ["bundled"] }
thiserror = "2.0"
r2d2 = "0.8"
r2d2_sqlite = "0.31.0"
uuid = { version = "1.18.0", features = ["v4"] }
triomphe = "0.1.15"
sqlited-macros = { path = "./sqlited-macros" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
bincode = "1.3"
md5 = "0.7"
syn = "2.0"
anyhow = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
serde_sqlite_jsonb = "0.2.1"
solana-pubkey = { version = "2.2", features = ["serde", "borsh"] }
borsh = { version = "1.5.7", features = ["derive"] }

[lib]
doctest = false