[package]
name = "sqlited-macros"
version = "0.3.0"
edition = "2024"
resolver = "3"

[lib]
proc-macro = true

[dependencies]
r2d2 = "0.8"
r2d2_sqlite = "0.29.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
sqlformat = "0.2"
proc-macro-error = "1.0"